# passwdsafe

./: .gitignore  LICENSE  LICENSES  README.md  build.gradle  gradle.properties  secrets-defaults.properties  settings.gradle
.github/: dependabot.yml
.github/workflows/: android.yml  codeql.yml
gradle/: verification-metadata.xml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
lib-box/: build.gradle
lib-onedrive/: build.gradle
lib-onedrive/authenticate/: build.gradle
lib-onedrive/onedriveaccess/: build.gradle
lib-owncloud/: build.gradle
lib-owncloud/src/main/: AndroidManifest.xml
lib/src/main/: AndroidManifest.xml
lib/src/main/res/drawable/: dropbox_trace.xml  rounded_bottom_sheet.xml
lib/src/main/res/drawable-anydpi/: generic_cloud.xml
lib/src/main/res/layout/: fragment_about_common.xml  fragment_progress_bottom_sheet.xml
lib/src/main/res/values-de/: strings.xml
lib/src/main/res/values-fr/: strings.xml
lib/src/main/res/values-nb/: strings.xml
passwdsafe/: build.gradle  proguard-rules-debug.pro  proguard-rules.pro
passwdsafe/schemas/com.jefftharris.passwdsafe.db.PasswdSafeDb/: 3.json
passwdsafe/src/main/: AndroidManifest.xml
passwdsafe/src/main/assets/: logback.xml
passwdsafe/src/main/cpp/: CMakeLists.txt  PasswdSafe.cpp  Util.cpp  Util.h  org_pwsafe_lib_crypto_SHA256Pws.h  sha256.cpp  sha256.h
sync/: AndroidManifest.xml  build.gradle  proguard-google-api-client.pro  proguard-rules.pro
sync/src/main/: AndroidManifest.xml
test/: test.psafe3  yubitest-corrupt-yubico-hdr.psafe3  yubitest.psafe3
(+409 files in other folders)
